# rust_sample

./: Cargo.toml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  main.rs
tests/: my_tests.rs
